# maintainer-tools

./: .gitignore  .pre-commit-hooks.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
tests/: test_fix_manifest_website.py  test_gen_addon_icon.py  test_gen_addon_readme.py  test_gen_addons_table.py  test_gen_external_dependencies.py  test_gen_metapackage.py  test_update_pre_commit_excluded_addons.py
tests/data/readme_tests/addon1/: README.expected-acme.rst  README.expected-oca.rst
tests/data/readme_tests/addon_one_maintainer/: README.expected-acme.rst  README.expected-oca.rst
tests/data/readme_tests/addon_two_maintainers/: README.expected-acme.rst  README.expected-oca.rst
tools/: config.py  configure_travis.py  copier_update.py  create_migration_issue.py  gen_addon_readme.rst.jinja  github_clabot_hook.py  itbr_clone_everything.py  itbr_copy_maintainers.py  itbr_gen_addon_readme.py  itbr_github_login.py  itbr_projects.py  migrate_branch.py  migrate_branch_empty.py  oca_towncrier.py  publish_modules.py  repo_manage.py  repo_pages.py
